Сервер функционирует, бд изменена и кеш теперь функционален
