# src/main/kotlin/com/apu/db/product/requests/Routing.kt
@@ -12,7 +12,9 @@ import io.ktor.server.response.*
 import io.ktor.server.routing.*
 import io.ktor.server.sessions.*
 import kotlinx.coroutines.CoroutineScope
+import kotlinx.coroutines.Dispatchers
 import kotlinx.coroutines.launch
+import kotlinx.coroutines.runBlocking
 
 fun Application.routingForProducts(dao: ProductDao) {
     val commandServer = CommandServer(dao)
@@ -22,22 +24,20 @@ fun Application.routingForProducts(dao: ProductDao) {
             call.respondText("Hello World!")
         }
 
-        authenticate("auth-form") {
-            route("/login") {
-                get {
-                    val userName = call.principal<UserIdPrincipal>()?.name.toString()
-                    call.sessions.set(UserSession(name = userName, count = 1))
-                    call.respondRedirect("/hello")
-                }
-                post {
-                    val userName = call.principal<UserIdPrincipal>()?.name.toString()
-                    call.sessions.set(UserSession(name = userName, count = 1))
-                    call.respondRedirect("/hello")
-                }
-            }
-        }
+//        authenticate("auth-form") {
+//            route("/login") {
+//                get {
+//                    val userName = call.principal<UserIdPrincipal>()?.name.toString()
+//                    call.sessions.set(UserSession(name = userName, count = 1))
+//                }
+//                post {
+//                    val userName = call.principal<UserIdPrincipal>()?.name.toString()
+//                    call.sessions.set(UserSession(name = userName, count = 1))
+//                }
+//            }
+//        }
 
-        authenticate("auth-session") {
+//        authenticate("auth-session") {
             post("/hello") {
                 val session = call.sessions.get<UserSession>()
                 call.respondText("Hello ${session?.name}! You have visited this page ${session?.count} times.")
@@ -49,18 +49,17 @@ fun Application.routingForProducts(dao: ProductDao) {
             post("/command") {
                 try {
                     val command = call.receive<Command>()
-                    commandServer.findReferenceOrNull(command.name!!)?.run {
-                        this.function(command.args!!.toList()) {
-                            CoroutineScope(this@routingForProducts.coroutineContext).launch {
+                    commandServer.findReferenceOrNull(command.name!!)?.let {
+                        it.function(command.args!!.toList()) {
+                            runBlocking {
                                 call.respond(HttpStatusCode.OK, it)
                             }
                         }
                     } ?: call.respond(HttpStatusCode.BadRequest, "Command not exists ${command.name}")
-
                 } catch (e: Exception) {
                     call.respond(HttpStatusCode.BadRequest, "Cannot deserialize command")
                 }
             }
         }
-    }
+//    }
 }
