# src/main/resources/openapi/documentation.yaml
@@ -8,7 +8,7 @@ servers:
 paths:
   /:
     get:
-      description: "Page, that shows, that server is running"
+      description: ""
       responses:
         "200":
           description: "OK"
@@ -21,7 +21,7 @@ paths:
                   value: "Hello World!"
   /command:
     post:
-      description: "Main client command endpoint"
+      description: ""
       requestBody:
         content:
           '*/*':
@@ -48,18 +48,6 @@ paths:
                   value: ""
   /hello:
     get:
-      description: "Page with greeting after login"
-      responses:
-        "200":
-          description: "OK"
-          content:
-            text/plain:
-              schema:
-                type: "string"
-              examples:
-                Example#1:
-                  value: ""
-    post:
       description: ""
       responses:
         "200":
@@ -71,31 +59,23 @@ paths:
               examples:
                 Example#1:
                   value: ""
-  /login:
-    get:
-      description: "Primary login endpoint"
-      responses:
-        "200":
-          description: "OK <br> Redirect"
-          content:
-            text/plain:
-              schema:
-                type: "string"
-              examples:
-                Example#1:
-                  value: "/hello"
     post:
-      description: ""
+      description: "authenticate(\"auth-form\") { <br> route(\"/login\") { <br> get\
+        \ { <br> val userName = call.principal<UserIdPrincipal>()?.name.toString()\
+        \ <br> call.sessions.set(UserSession(name = userName, count = 1)) <br> } <br>\
+        \ post { <br> val userName = call.principal<UserIdPrincipal>()?.name.toString()\
+        \ <br> call.sessions.set(UserSession(name = userName, count = 1)) <br> } <br>\
+        \ } <br> } <br> authenticate(\"auth-session\") {"
       responses:
         "200":
-          description: "OK <br> Redirect"
+          description: "OK"
           content:
             text/plain:
               schema:
                 type: "string"
               examples:
                 Example#1:
-                  value: "/hello"
+                  value: ""
   /json/kotlinx-serialization:
     get:
       description: ""
